plugins/devkit/devkit-java-tests/testData/inspections/nonDefaultConstructor/Foo.java
<error descr="Cyclic inheritance involving 'Foo'">class Foo extends Foo</error> {

}